overflow fixing

--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
+/*past color: #fbb; */
+
 #home {
   background: url(../IMG_0765.jpg) no-repeat center center fixed;
-  height: 100vh;
+  height: 100%;
   width: auto;
   background-position: 0% 0%;
   background-size: 100%;
-  background-repeat: no-repeat;
   overflow: hidden;
 }
 
@@ -15,10 +16,10 @@
   padding: 20px;
   text-align: center;
   position: fixed;
-  left: 19%;
   top: 38.75%;
   border: 3px solid #fff;
   margin: 5px;
+  left: 19%;
 }
 
 .neato-header h1 {
@@ -26,6 +27,12 @@
   font-family: "Open Sans Condensed";
   text-transform: uppercase;
   letter-spacing: 0.05em;
+}
+
+.neato-header h2 {
+  color: black;
+  font-size: 50px;
+  font-family: Raleway; 
 }
 
 @media (max-width: 768px) {
