--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   background: #f1f1f1;
   height:100vh;
   width:100vw;
+  position: absolute;
   /*position:fixed; */
 }
 
@@ -32,7 +33,7 @@ p {
   padding: 5%;
 }
 
-/* PROJECTS */
+/* RESUME & PROJECTS HEADERS */
 .sectionhead {
   text-align: center;
   position: relative;
@@ -41,19 +42,16 @@ p {
 }
 .sectionhead h2 {
   font-family: Raleway;
-  color: #333;
+  color: #222;
   font-size: 50px;
   text-align: center;
   margin: 0 30px;
 }
-.sectionhead h2 a {
-  color: #f7b2b2;
-  text-decoration: none; 
-}
-.sectionhead span {
+
+.sectionhead span { /* lines */
   display: inline-block;
   position: absolute;
-  background: #fbb;
+  background: #eaa;
   height: 3px;
   left: 50%;
 }
@@ -75,7 +73,18 @@ p {
   transform: translateX(160px);
 }
 
+.sectionhead a {
+  color: #eaa;
+  text-decoration: none; 
+}
+
 /* RESUME CONTACT INFO */ 
+#resume {
+  width: 100vw; 
+  padding: 0px;
+  margin: 0px; 
+}
+
 #rescontact {
   text-align: center;
   position: relative;
@@ -99,26 +108,14 @@ p {
   margin-right: 10px; 
 }
 
-/* HEADER CSS ABOUT SPECIFICITIES */ 
+/* NON - HEADER CSS ABOUT SPECIFICITIES */ 
 #about {
-  left: 17.5%;
-  top: 0%;
+  text-align: center;
   border-color: black;
-  margin: 0px;
   margin-top: 100px;
   margin-bottom: 50px; 
   position: relative;
-
-}
-
-#about h2 {
-  color: black;
-  font-size: 50px;
-  font-family: Raleway; 
-}
-
-#about h2:before, #about h2:after {
-  border-color: black; 
+  display: inline-block;
 }
 
 #about p {
@@ -131,7 +128,7 @@ p {
 }
 
 #about a {
-  color: #f7b2b2;
+  color: #eaa;
   text-decoration: none;
 }
 
